--- a/src/app/pages/customer/wallet/wallet.page.html
+++ b/src/app/pages/customer/wallet/wallet.page.html
@@ -8,6 +8,7 @@
         My Stamp Cards
       </ion-segment-button>
       <ion-segment-button value="allCards">
+        <ion-button (click)="getSelectOptions()">Companies</ion-button>
         All Cards
       </ion-segment-button>
     </ion-segment>
@@ -15,5 +16,18 @@
 </ion-header>
 
 <ion-content>
+  <ion-content>
+    <ion-list [ngSwitch]="segment" >
+      <ion-item-group *ngSwitchCase="'myCards'">
+        <div>test</div>
+      </ion-item-group>
+    </ion-list>
+
+    <ion-list [ngSwitch]="segment" >
+      <ion-item-group *ngSwitchCase="'allCards'">
+        <div>test2</div>
+        <div>{{myjason}}</div>
+      </ion-item-group>
+    </ion-list>
 
 </ion-content>
