--- a/src/app/pages/customer/wallet/wallet.page.html
+++ b/src/app/pages/customer/wallet/wallet.page.html
@@ -18,6 +18,12 @@
   <ion-content>
     <ion-list [ngSwitch]="segment" >
       <ion-item-group *ngSwitchCase="'myCards'">
+        <div>To Do</div>
+      </ion-item-group>
+    </ion-list>
+
+    <ion-list [ngSwitch]="segment" >
+      <ion-item-group *ngSwitchCase="'allCards'">
         <ion-card *ngFor="let company of companies">
           <ion-card-header>
             <ion-card-title>{{ company.companyName }}</ion-card-title>
@@ -29,12 +35,6 @@
             <button>{{ company.stampCard.score }}</button>
           </ion-card-content>
         </ion-card>
-      </ion-item-group>
-    </ion-list>
-
-    <ion-list [ngSwitch]="segment" >
-      <ion-item-group *ngSwitchCase="'allCards'">
-        <div>test2</div>
       </ion-item-group>
     </ion-list>
 
