--- a/src/app/pages/customer/wallet/wallet.page.html
+++ b/src/app/pages/customer/wallet/wallet.page.html
@@ -26,7 +26,7 @@
             <ion-item-group *ngSwitchCase="'allCards'">
                 <ion-card *ngFor="let company of companies">
 
-                    <ion-item detail="false" lines="none" routerLink="/tabs/wallet/stamp-card/{{company.stampCard.id}}">
+                    <ion-item detail="false" lines="none" routerLink="/tabs/wallet/card-detail/{{company.id}}">
                         <ion-card-header>
                             <ion-card-title>{{ company.companyName }}</ion-card-title>
                             <ion-card-subtitle>{{company.zipCode}} {{ company.city }} {{ company.street }} {{company.localNumber}}</ion-card-subtitle>
