--- a/src/app/pages/public/login/login.page.html
+++ b/src/app/pages/public/login/login.page.html
@@ -1,17 +1,27 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>Login</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>Login</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
+    <h2 class = login-logo>Loyalty Card Wallet</h2>
+    <form class="login-button2" #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate>
+        <ion-card>
+            <ion-input name="login" placeholder="Login" ngModel required #first="ngModel"></ion-input>
+        </ion-card>
+        <ion-card>
+            <ion-input type="password" placeholder="Password" name="password" ngModel></ion-input>
+        </ion-card>
+        <button class="md-raised">Submit</button>
+    </form>
 
-<!--  <ion-button (click)="login()" expand="block">Login</ion-button>-->
-  <div class="login-button">
-  <ion-button class="btn" color="secondary" href="/tabs/wallet">Login</ion-button>
-  </div>
+    <!--  <ion-button (click)="signin()" expand="block">Login</ion-button>-->
+    <!--  <div class="login-button">-->
+    <!--  <ion-button class="btn" color="secondary" href="/tabs/wallet">Login</ion-button>-->
+    <!--  </div>-->
 
-  <div class="register-button">
-  <ion-button class="btn" color="secondary" href="/register">Register</ion-button>
-  </div>
+    <div class="register-button">
+        <ion-button class="btn" color="secondary" href="/register">Register</ion-button>
+    </div>
 </ion-content>
