--- a/src/app/pages/customer/card-detail/card-detail.page.html
+++ b/src/app/pages/customer/card-detail/card-detail.page.html
@@ -3,7 +3,7 @@
     <ion-button slot="start">
       <ion-back-button defaultHref="/tabs/wallet"></ion-back-button>
     </ion-button>
-    <ion-title>card-detail</ion-title>
+    <ion-title>Card Details</ion-title>
   </ion-toolbar>
 </ion-header>
 
