--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <ion-app>
   <ion-router-outlet></ion-router-outlet>
-  <ion-split-pane contentId="main-content">
+<!--  <ion-split-pane *ngIf="isLogged" contentId="main-content">-->
+    <ion-split-pane contentId="main-content">
 
     <ion-menu contentId="main-content">
       <ion-content>
