get userId from backend

--- a/src/app/pages/public/login/login.page.html
+++ b/src/app/pages/public/login/login.page.html
@@ -19,6 +19,6 @@
     <!--  </div>-->
 
     <div class="register-button">
-        <ion-button class="btn" color="secondary" href="/register">Register</ion-button>
+        <ion-button class="btn" color="secondary" href="/register" router-direction="forward" >Register</ion-button>
     </div>
 </ion-content>
