--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ion-app>
     <ion-router-outlet></ion-router-outlet>
-    <!--  <ion-split-pane *ngIf="isLogged" contentId="main-content">-->
-    <ion-split-pane contentId="main-content">
+      <ion-split-pane *ngIf="isLogged" contentId="main-content">
+<!--    <ion-split-pane contentId="main-content">-->
 
         <ion-menu contentId="main-content">
             <ion-content>
@@ -25,7 +25,7 @@
                         Account
                     </ion-list-header>
                     <ion-menu-toggle auto-hide="false">
-                        <ion-item routerLink="/login" routerLinkActive="selected" router-direction="root"
+                        <ion-item (click)="logout()" routerLinkActive="selected" router-direction="root"
                                   detail="false">
                             <ion-icon slot="start" name="log-out-outline"></ion-icon>
                             <ion-label>
