--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ion-app>
-    <ion-router-outlet></ion-router-outlet>
-      <ion-split-pane *ngIf="isLogged" contentId="main-content">
+    <ion-router-outlet (activate)="updateToken()"></ion-router-outlet>
+      <ion-split-pane *ngIf="isLogged$ | async" contentId="main-content">
 <!--    <ion-split-pane contentId="main-content">-->
 
         <ion-menu contentId="main-content">
@@ -40,7 +40,7 @@
 
         </ion-menu>
 
-        <ion-router-outlet id="main-content"></ion-router-outlet>
+        <ion-router-outlet (activate)="updateToken()" id="main-content"></ion-router-outlet>
 
     </ion-split-pane>
 </ion-app>
