--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
+<button (click)="logout()">logoutpls</button>
+
 <ion-app>
-    <ion-router-outlet (activate)="updateToken()"></ion-router-outlet>
+    <ion-router-outlet></ion-router-outlet>
       <ion-split-pane *ngIf="isLogged$ | async" contentId="main-content">
 <!--    <ion-split-pane contentId="main-content">-->
 
@@ -40,7 +42,7 @@
 
         </ion-menu>
 
-        <ion-router-outlet (activate)="updateToken()" id="main-content"></ion-router-outlet>
+<!--        <ion-router-outlet id="main-content"></ion-router-outlet>-->
 
     </ion-split-pane>
 </ion-app>
