--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
 
 <ion-app>
     <ion-router-outlet></ion-router-outlet>
-      <ion-split-pane *ngIf="isLogged$ | async" contentId="main-content">
-<!--    <ion-split-pane contentId="main-content">-->
+<!--      <ion-split-pane *ngIf="isLogged$ | async" contentId="main-content">-->
+    <ion-split-pane contentId="main-content">
 
         <ion-menu contentId="main-content">
             <ion-content>
@@ -42,7 +42,7 @@
 
         </ion-menu>
 
-<!--        <ion-router-outlet id="main-content"></ion-router-outlet>-->
+        <ion-router-outlet id="main-content"></ion-router-outlet>
 
     </ion-split-pane>
 </ion-app>
