--- a/src/app/pages/customer/wallet/wallet.page.html
+++ b/src/app/pages/customer/wallet/wallet.page.html
@@ -3,7 +3,7 @@
         <ion-title>Wallet</ion-title>
     </ion-toolbar>
     <ion-toolbar *ngIf="!ios">
-        <ion-segment [(ngModel)]="segment" (ionChange)="updateSchedule()">
+        <ion-segment [(ngModel)]="segment">
             <ion-segment-button value="myCards">
                 My Stamp Cards
             </ion-segment-button>
@@ -53,3 +53,4 @@
         </ion-list>
 
     </ion-content>
+</ion-content>
