--- a/src/app/pages/public/register/register.page.html
+++ b/src/app/pages/public/register/register.page.html
@@ -20,7 +20,44 @@
 <ion-content>
     <ion-list [ngSwitch]="segment">
         <ion-item-group *ngSwitchCase="'userRegister'">
-            <p>User Register site</p>
+
+            <div padding>
+                <form #userForm="ngForm" (ngSubmit)="userRegister(userForm)">
+                    <ion-card>
+
+                        <ion-item>
+                            <ion-input name="userName" type="text" placeholder="Login" ngModel required></ion-input>
+                        </ion-item>
+
+                        <ion-item>
+                            <ion-input name="password" type="password" placeholder="Password" ngModel
+                                       required></ion-input>
+                        </ion-item>
+
+
+                        <ion-item>
+                            <ion-input name="firstName" type="text" placeholder="First Name" ngModel
+                                       required></ion-input>
+                        </ion-item>
+
+                        <ion-item>
+                            <ion-input name="lastName" type="text" placeholder="Last Name" ngModel required></ion-input>
+                        </ion-item>
+
+                        <ion-item>
+                            <ion-input name="email" type="email" placeholder="your@email.com" ngModel
+                                       required></ion-input>
+                        </ion-item>
+
+                    </ion-card>
+
+                    <div padding>
+                        <ion-button size="large" type="submit" expand="block">User Register</ion-button>
+                    </div>
+                </form>
+
+            </div>
+
         </ion-item-group>
     </ion-list>
 
@@ -28,67 +65,62 @@
         <ion-item-group *ngSwitchCase="'companyRegister'">
 
             <div padding>
+                <form #companyForm="ngForm" (ngSubmit)="companyRegister(companyForm)">
+                    <ion-card>
 
-                <ion-card>
-                    <h1>Manager Details</h1>
-                    <ion-item>
-                        <ion-input name="firstName" type="text" placeholder="First Name" ngModel required></ion-input>
-                    </ion-item>
+                        <ion-item>
+                            <ion-input name="userName" type="text" placeholder="Login" ngModel required></ion-input>
+                        </ion-item>
 
-                    <ion-item>
-                        <ion-input name="lastName" type="text" placeholder="Last Name" ngModel required></ion-input>
-                    </ion-item>
+                        <ion-item>
+                            <ion-input name="password" type="password" placeholder="Password" ngModel
+                                       required></ion-input>
+                        </ion-item>
 
-                    <ion-item>
-                        <ion-input name="email" type="email" placeholder="your@email.com" ngModel required></ion-input>
-                    </ion-item>
-                </ion-card>
 
-                <ion-card>
-                    <h1>Company Details</h1>
-                    <ion-item>
-                        <ion-input name="companyName" type="text" placeholder="Company Name" ngModel
-                                   required></ion-input>
-                    </ion-item>
+                        <ion-item>
+                            <ion-input name="firstName" type="text" placeholder="First Name" ngModel
+                                       required></ion-input>
+                        </ion-item>
 
-                    <ion-item>
-                        <ion-input name="city" type="text" placeholder="City" ngModel required></ion-input>
-                    </ion-item>
+                        <ion-item>
+                            <ion-input name="lastName" type="text" placeholder="Last Name" ngModel required></ion-input>
+                        </ion-item>
 
-                    <ion-item>
-                        <ion-input name="zipCode" type="text" placeholder="Zip-Code" ngModel required></ion-input>
-                    </ion-item>
+                        <ion-item>
+                            <ion-input name="email" type="email" placeholder="your@email.com" ngModel
+                                       required></ion-input>
+                        </ion-item>
 
-                    <ion-item>
-                        <ion-input name="street" type="text" placeholder="Street" ngModel required></ion-input>
-                    </ion-item>
 
-                    <ion-item>
-                        <ion-input name="localNumber" type="text" placeholder="Local Number" ngModel
-                                   required></ion-input>
-                    </ion-item>
-                </ion-card>
+                        <ion-item>
+                            <ion-input name="companyName" type="text" placeholder="Company Name" ngModel
+                                       required></ion-input>
+                        </ion-item>
 
-                <ion-card>
-                    <h1>Login Details</h1>
-                    <ion-item>
-                        <ion-input name="login" type="text" placeholder="Login" ngModel required></ion-input>
-                    </ion-item>
+                        <ion-item>
+                            <ion-input name="city" type="text" placeholder="City" ngModel required></ion-input>
+                        </ion-item>
 
-                    <ion-item>
-                        <ion-input name="password" type="password" placeholder="Password" ngModel required></ion-input>
-                    </ion-item>
+                        <ion-item>
+                            <ion-input name="zipCode" type="text" placeholder="Zip-Code" ngModel required></ion-input>
+                        </ion-item>
 
-                    <ion-item>
-                        <ion-input name="confirm" type="password" placeholder="Password again" ngModel
-                                   required></ion-input>
-                    </ion-item>
-                </ion-card>
+                        <ion-item>
+                            <ion-input name="street" type="text" placeholder="Street" ngModel required></ion-input>
+                        </ion-item>
 
+                        <ion-item>
+                            <ion-input name="localNumber" type="text" placeholder="Local Number" ngModel
+                                       required></ion-input>
+                        </ion-item>
+                    </ion-card>
+                    <div padding>
+                        <ion-button size="large" type="submit" expand="block">Company Register</ion-button>
+                    </div>
+                </form>
             </div>
-            <div padding>
-                <ion-button size="large" type="submit" expand="block">Register</ion-button>
-            </div>
+
         </ion-item-group>
     </ion-list>
 </ion-content>
