add tabs page and tabs page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<button (click)="logout()">logoutpls</button>
+<!--<button (click)="logout()">logoutpls</button>-->
 
 <ion-app>
     <ion-router-outlet></ion-router-outlet>
