--- a/src/app/pages/customer/card-detail/card-detail.page.html
+++ b/src/app/pages/customer/card-detail/card-detail.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-button slot="start">
-      <ion-back-button defaultHref="/tabs/wallet"></ion-back-button>
+      <ion-back-button defaultHref="/menu/wallet"></ion-back-button>
     </ion-button>
     <ion-title>Card Details</ion-title>
   </ion-toolbar>
