--- a/src/app/pages/public/login/login.page.html
+++ b/src/app/pages/public/login/login.page.html
@@ -13,12 +13,10 @@
         <button class="md-raised">Submit</button>
     </form>
 
-    <!--  <ion-button (click)="signin()" expand="block">Login</ion-button>-->
-    <!--  <div class="login-button">-->
-    <!--  <ion-button class="btn" color="secondary" href="/tabs/wallet">Login</ion-button>-->
-    <!--  </div>-->
 
     <div class="register-button">
         <ion-button class="btn" color="secondary" href="/register" router-direction="forward" >Register</ion-button>
     </div>
+
+    <ion-button expand="block" routerLink="/menu/stat">Enter Manager Page</ion-button>
 </ion-content>
