add basic qr functionality for companies

--- a/src/app/pages/customer/promo/promo.page.html
+++ b/src/app/pages/customer/promo/promo.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Promotions (Last 3 Modification)</ion-title>
+    <ion-title>Recent</ion-title>
   </ion-toolbar>
 </ion-header>
 
