--- a/src/app/pages/manager/stamp-card/stamp-card.page.html
+++ b/src/app/pages/manager/stamp-card/stamp-card.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>stamp-card</ion-title>
+    <ion-title>Company Stamp card</ion-title>
   </ion-toolbar>
 </ion-header>
 
