--- a/src/app/pages/manager/qr/qr.page.html
+++ b/src/app/pages/manager/qr/qr.page.html
@@ -1,9 +1,53 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>qr</ion-title>
+    <ion-title>QR Code</ion-title>
+  </ion-toolbar>
+  <ion-toolbar *ngIf="!ios">
+    <ion-segment [(ngModel)]="segment">
+      <ion-segment-button value="scanQR">
+        Scan QR Code
+      </ion-segment-button>
+      <ion-segment-button value="myQR">
+        Company Transaction QR
+      </ion-segment-button>
+    </ion-segment>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-list [ngSwitch]="segment" >
+    <ion-item-group *ngSwitchCase="'myQR'">
+      <ion-item>
+        <ion-input type="text" placeholder="My QR code data" [(ngModel)]="qrData">
+        </ion-input>
+      </ion-item>
+      <div class="qrImage">
+        <ngx-qrcode [value]="qrData" [elementType]="elementType" qrl-class="my-code" class="qrImage" >
+        </ngx-qrcode>
+      </div>
 
+
+      <ion-card-content>
+        <ion-button expand="full" color="tertiary" (click)="downloadQR()" *ngIf="elementType === 'canvas'">
+          <ion-icon name="download" slot="start"></ion-icon>
+          Download Your QR Code
+        </ion-button>
+      </ion-card-content>
+
+    </ion-item-group>
+
+    <ion-item-group *ngSwitchCase="'scanQR'">
+      <ion-button expand="full" (click)="scanCode()" color="secondary">
+        <ion-icon name="qr-scanner"></ion-icon>
+        Scan Code
+      </ion-button>
+
+      <ion-card *ngIf="scannedCode">
+        <ion-card-content>
+          Result from Scan: {{ scannedCode }}
+        </ion-card-content>
+      </ion-card>
+    </ion-item-group>
+
+  </ion-list>
 </ion-content>
