--- a/src/app/pages/manager/stat/stat.page.html
+++ b/src/app/pages/manager/stat/stat.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>stat</ion-title>
+    <ion-title>Statistics</ion-title>
   </ion-toolbar>
 </ion-header>
 
