set login redirect to it's UserType Page

--- a/src/app/pages/customer/menu/menu.page.html
+++ b/src/app/pages/customer/menu/menu.page.html
@@ -13,6 +13,7 @@
         <ion-menu-toggle contentId="content" auto-hide="false" *ngFor="let p of pages">
           <ion-item [routerLink]="p.url" routerDirection="root"
                     [class.active-item]="selectedPatch.startsWith(p.url)">
+            <ion-icon slot="start" [name]="p.icon + '-outline'"></ion-icon>
             <ion-label>
               {{p.title}}
             </ion-label>
