--- a/src/app/pages/public/login/login.page.html
+++ b/src/app/pages/public/login/login.page.html
@@ -18,5 +18,9 @@
         <ion-button class="btn" color="secondary" href="/register" router-direction="forward" >Register</ion-button>
     </div>
 
-    <ion-button expand="block" routerLink="/menu/stat">Enter Manager Page</ion-button>
+<!--Delete in Feature-->
+    <ion-button expand="block" (click)="temporaryLogin('adam','adam123')">Enter Customer Page</ion-button>
+    <ion-button expand="block" (click)="temporaryLogin('adi','adi123')">Enter Customer Page</ion-button>
+    <ion-button expand="block" (click)="temporaryLogin('admin','admin123')">Enter Admin Page</ion-button>
+
 </ion-content>
