--- a/src/app/pages/admin/view/view.page.html
+++ b/src/app/pages/admin/view/view.page.html
@@ -3,10 +3,10 @@
     <ion-buttons slot="end">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Map</ion-title>
+    <ion-title>All View</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div #map id="map"></div>
+
 </ion-content>
