--- a/src/app/pages/customer/promo/promo.page.html
+++ b/src/app/pages/customer/promo/promo.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="end">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Recent</ion-title>
   </ion-toolbar>
 </ion-header>
