--- a/src/app/pages/customer/menu/menu.page.html
+++ b/src/app/pages/customer/menu/menu.page.html
@@ -1,32 +1,37 @@
 <ion-split-pane contentId="main">
-  <!--  the side menu  -->
-  <ion-menu contentId="main">
-    <ion-header>
-      <ion-toolbar color="primary">
-        <ion-title>Menu</ion-title>
-      </ion-toolbar>
-    </ion-header>
+    <!--  the side menu  -->
+    <ion-menu contentId="main">
+        <ion-header>
+            <ion-toolbar color="primary">
+                <ion-title>Menu</ion-title>
+            </ion-toolbar>
+        </ion-header>
 
 
-    <ion-content>
-      <ion-list>
-        <ion-menu-toggle contentId="content" auto-hide="false" *ngFor="let p of pages">
-          <ion-item [routerLink]="p.url" routerDirection="root"
-                    [class.active-item]="selectedPatch.startsWith(p.url)">
-            <ion-icon slot="start" [name]="p.icon + '-outline'"></ion-icon>
-            <ion-label>
-              {{p.title}}
-            </ion-label>
-          </ion-item>
-        </ion-menu-toggle>
+        <ion-content>
+            <ion-list>
+                <ion-menu-toggle contentId="content" auto-hide="false" *ngFor="let p of pages">
+                    <ion-item [routerLink]="p.url" routerDirection="root"
+                              [class.active-item]="selectedPatch.startsWith(p.url)">
+                        <ion-icon slot="start" [name]="p.icon + '-outline'"></ion-icon>
+                        <ion-label>
+                            {{p.title}}
+                        </ion-label>
+                    </ion-item>
+                </ion-menu-toggle>
 
-        <ion-item tappable (click)="logOut()" routerDirection="root">
-          <ion-icon name="log-out" slot="start"></ion-icon>
-          Logout
-        </ion-item>
-      </ion-list>
-    </ion-content>
-  </ion-menu>
+            </ion-list>
+            <ion-list>
+                <ion-list-header>
+                    Account
+                </ion-list-header>
+                <ion-item tappable (click)="logOut()" routerDirection="root">
+                    <ion-icon name="log-out" slot="start"></ion-icon>
+                    Logout
+                </ion-item>
+            </ion-list>
+        </ion-content>
+    </ion-menu>
 
-  <ion-router-outlet id="main"></ion-router-outlet>
+    <ion-router-outlet id="main"></ion-router-outlet>
 </ion-split-pane>
