--- a/src/app/pages/manager/menu/menu.page.html
+++ b/src/app/pages/manager/menu/menu.page.html
@@ -20,10 +20,15 @@
           </ion-item>
         </ion-menu-toggle>
 
-        <ion-item tappable (click)="logOut()" routerDirection="root">
-          <ion-icon name="log-out" slot="start"></ion-icon>
-          Logout
-        </ion-item>
+        <ion-list>
+          <ion-list-header>
+            Account
+          </ion-list-header>
+          <ion-item tappable (click)="logOut()" routerDirection="root">
+            <ion-icon name="log-out" slot="start"></ion-icon>
+            Logout
+          </ion-item>
+        </ion-list>
       </ion-list>
     </ion-content>
   </ion-menu>
