create accountEdit form for Customer and Admin

--- a/src/app/pages/admin/menu/menu.page.html
+++ b/src/app/pages/admin/menu/menu.page.html
@@ -24,6 +24,13 @@
           <ion-list-header>
             Account
           </ion-list-header>
+          <ion-item [routerLink]="'/menu/account'" routerDirection="root"
+                    [class.active-item]="selectedPatch.startsWith('/menu/account')">
+            <ion-icon slot="start" [name]="'person-circle-outline'"></ion-icon>
+            <ion-label>
+              Edit Account
+            </ion-label>
+          </ion-item>
           <ion-item tappable (click)="logOut()" routerDirection="root">
             <ion-icon name="log-out" slot="start"></ion-icon>
             Logout
