--- a/src/app/pages/manager/menu/menu.page.html
+++ b/src/app/pages/manager/menu/menu.page.html
@@ -25,8 +25,8 @@
             Account
           </ion-list-header>
 
-          <ion-item [routerLink]="'/menu/account'" routerDirection="root"
-                    [class.active-item]="selectedPatch.startsWith('/menu/account')">
+          <ion-item [routerLink]="'/menu/accountM'" routerDirection="root"
+                    [class.active-item]="selectedPatch.startsWith('/menu/accountM')">
             <ion-icon slot="start" [name]="'person-circle-outline'"></ion-icon>
             <ion-label>
               Edit Account
