--- a/src/app/pages/manager/account/account.page.html
+++ b/src/app/pages/manager/account/account.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="end">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Admin Account</ion-title>
+    <ion-title>Manager Account</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -36,6 +36,31 @@
       <ion-item>
         <ion-text>E-Mail : </ion-text>
         <ion-input name="email" type="email" placeholder=" Enter new E-Mail" ngModel ='{{userDetails.email}}'></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-text>Company Name : </ion-text>
+        <ion-input name="companyName" type="text" placeholder="Company Name" ngModel ='{{companyDetails.companyName}}'></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-text>City Name : </ion-text>
+        <ion-input name="city" type="text" placeholder="Enter City" ngModel ='{{companyDetails.city}}'></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-text>Zip-Code : </ion-text>
+        <ion-input name="zipCode" type="text" placeholder="Enter Zip-Code" ngModel ='{{companyDetails.zipCode}}'></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-text>Street Name : </ion-text>
+        <ion-input name="street" type="text" placeholder="Enter Street" ngModel ='{{companyDetails.street}}'></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-text>Local Number : </ion-text>
+        <ion-input name="localNumber" type="text" placeholder="Enter Local Number" ngModel ='{{companyDetails.localNumber}}'></ion-input>
       </ion-item>
 
 
