--- a/src/app/pages/admin/stat/stat.page.html
+++ b/src/app/pages/admin/stat/stat.page.html
@@ -8,5 +8,38 @@
 </ion-header>
 
 <ion-content>
+<!--  &lt;!&ndash; Default &ndash;&gt;-->
+<!--  <ion-badge>99</ion-badge>-->
 
+<!--  &lt;!&ndash; Colors &ndash;&gt;-->
+<!--  <ion-badge color="primary">11</ion-badge>-->
+<!--  <ion-badge color="secondary">22</ion-badge>-->
+<!--  <ion-badge color="tertiary">33</ion-badge>-->
+<!--  <ion-badge color="success">44</ion-badge>-->
+<!--  <ion-badge color="warning">55</ion-badge>-->
+<!--  <ion-badge color="danger">66</ion-badge>-->
+<!--  <ion-badge color="light">77</ion-badge>-->
+<!--  <ion-badge color="medium">88</ion-badge>-->
+<!--  <ion-badge color="dark">99</ion-badge>-->
+
+  <!-- Item with badge on left and right -->
+  <ion-item>
+    <ion-label>All Users</ion-label>
+    <ion-badge color="warning" slot="end">243</ion-badge>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>All Companies</ion-label>
+    <ion-badge color="success" slot="end">242</ion-badge>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>All Customers</ion-label>
+    <ion-badge slot="end">2232</ion-badge>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>All Stamp Cards</ion-label>
+    <ion-badge color="danger" slot="end">142</ion-badge>
+  </ion-item>
 </ion-content>
