--- a/src/app/pages/public/login/login.page.html
+++ b/src/app/pages/public/login/login.page.html
@@ -20,7 +20,7 @@
 
 <!--Delete in Feature-->
     <ion-button expand="block" (click)="temporaryLogin('adam','adam123')">Enter Customer Page</ion-button>
-    <ion-button expand="block" (click)="temporaryLogin('ronaldo','ronaldo123')">Enter Customer Page</ion-button>
+    <ion-button expand="block" (click)="temporaryLogin('ronaldo','ronaldo123')">Enter Manager Page</ion-button>
     <ion-button expand="block" (click)="temporaryLogin('admin','admin123')">Enter Admin Page</ion-button>
 
 </ion-content>
