--- a/src/app/pages/customer/menu/menu.page.html
+++ b/src/app/pages/customer/menu/menu.page.html
@@ -25,17 +25,19 @@
                 <ion-list-header>
                     Account
                 </ion-list-header>
-                <ion-item [routerLink]="'/menu/account'" routerDirection="root"
-                          [class.active-item]="selectedPatch.startsWith('/menu/account')">
-                    <ion-icon slot="start" [name]="'person-circle-outline'"></ion-icon>
-                    <ion-label>
-                        Edit Account
-                    </ion-label>
-                </ion-item>
-                <ion-item tappable (click)="logOut()" routerDirection="root">
-                    <ion-icon name="log-out" slot="start"></ion-icon>
-                    Logout
-                </ion-item>
+                <ion-menu-toggle contentId="content" auto-hide="false">
+                    <ion-item [routerLink]="'/menu/account'" routerDirection="root"
+                              [class.active-item]="selectedPatch.startsWith('/menu/account')">
+                        <ion-icon slot="start" [name]="'person-circle-outline'"></ion-icon>
+                        <ion-label>
+                            Edit Account
+                        </ion-label>
+                    </ion-item>
+                    <ion-item tappable (click)="logOut()" routerDirection="root">
+                        <ion-icon name="log-out" slot="start"></ion-icon>
+                        Logout
+                    </ion-item>
+                </ion-menu-toggle>
             </ion-list>
         </ion-content>
     </ion-menu>
