add stat.service and statistic for admin

--- a/src/app/pages/admin/stat/stat.page.html
+++ b/src/app/pages/admin/stat/stat.page.html
@@ -25,21 +25,22 @@
   <!-- Item with badge on left and right -->
   <ion-item>
     <ion-label>All Users</ion-label>
-    <ion-badge color="warning" slot="end">243</ion-badge>
+    <ion-badge color="warning" slot="end">{{usersCount}}</ion-badge>
   </ion-item>
 
   <ion-item>
     <ion-label>All Companies</ion-label>
-    <ion-badge color="success" slot="end">242</ion-badge>
+    <ion-badge color="success" slot="end">{{companiesCount}}</ion-badge>
   </ion-item>
 
   <ion-item>
     <ion-label>All Customers</ion-label>
-    <ion-badge slot="end">2232</ion-badge>
+    <ion-badge slot="end">{{customersCount}}</ion-badge>
   </ion-item>
 
   <ion-item>
     <ion-label>All Stamp Cards</ion-label>
-    <ion-badge color="danger" slot="end">142</ion-badge>
+    <ion-badge color="danger" slot="end">{{stampCardsCount}}</ion-badge>
   </ion-item>
+
 </ion-content>
