--- a/src/app/pages/manager/stamp-card/stamp-card.page.html
+++ b/src/app/pages/manager/stamp-card/stamp-card.page.html
@@ -1,12 +1,26 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="end">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Company Stamp card</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="end">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Company Stamp card</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
+    <ion-card>
+        <ion-card-header>
+            <ion-card-title>{{user?.userSpecifics.company.companyName}}</ion-card-title>
+            <p>Rewards:</p>
+            <ion-card-content *ngFor="let reward of user?.userSpecifics.company.stampCard.stampCardReward">
+                <ion-card-subtitle>{{reward.position}} Stamps: {{reward.reward.rewardDescription}}</ion-card-subtitle>
+            </ion-card-content>
+
+            <!--                    <ion-card-content>-->
+            <!--                        <button>{{ company.stampCard.score }}</button>-->
+            <!--                    </ion-card-content>-->
+        </ion-card-header>
+    </ion-card>
 
 </ion-content>
