add stat for company page

--- a/src/app/pages/admin/stat/stat.page.html
+++ b/src/app/pages/admin/stat/stat.page.html
@@ -29,12 +29,12 @@
   </ion-item>
 
   <ion-item>
-    <ion-label>All Companies</ion-label>
+    <ion-label>- in this Companies</ion-label>
     <ion-badge color="success" slot="end">{{companiesCount}}</ion-badge>
   </ion-item>
 
   <ion-item>
-    <ion-label>All Customers</ion-label>
+    <ion-label>- in this Customers</ion-label>
     <ion-badge slot="end">{{customersCount}}</ion-badge>
   </ion-item>
 
