--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,47 +1,61 @@
 <!--<button (click)="logout()">logoutpls</button>-->
+<div *ngIf="showSplash" class="splash">
+    <div class="sk-cube-grid">
+        <div class="sk-cube sk-cube1"></div>
+        <div class="sk-cube sk-cube2"></div>
+        <div class="sk-cube sk-cube3"></div>
+        <div class="sk-cube sk-cube4"></div>
+        <div class="sk-cube sk-cube5"></div>
+        <div class="sk-cube sk-cube6"></div>
+        <div class="sk-cube sk-cube7"></div>
+        <div class="sk-cube sk-cube8"></div>
+        <div class="sk-cube sk-cube9"></div>
+        <p>LCW</p>
+    </div>
+</div>
 
 <ion-app>
     <ion-router-outlet></ion-router-outlet>
-<!--      <ion-split-pane *ngIf="isLogged$ | async" contentId="main-content">-->
-<!--    <ion-split-pane contentId="main-content">-->
+    <!--      <ion-split-pane *ngIf="isLogged$ | async" contentId="main-content">-->
+    <!--    <ion-split-pane contentId="main-content">-->
 
-<!--        <ion-menu contentId="main-content">-->
-<!--            <ion-content>-->
-<!--                <ion-list>-->
-<!--                    <ion-list-header>-->
-<!--                        Loyalty Card Stamp App-->
-<!--                    </ion-list-header>-->
-<!--                    <ion-menu-toggle autoHide="false" *ngFor="let p of appPages; let i = index">-->
-<!--                        <ion-item [routerLink]="p.url" routerLinkActive="selected" routerDirection="root"-->
-<!--                                  detail="false">-->
-<!--                            <ion-icon slot="start" [name]="p.icon + '-outline'"></ion-icon>-->
-<!--                            <ion-label>-->
-<!--                                {{p.title}}-->
-<!--                            </ion-label>-->
-<!--                        </ion-item>-->
-<!--                    </ion-menu-toggle>-->
-<!--                </ion-list>-->
+    <!--        <ion-menu contentId="main-content">-->
+    <!--            <ion-content>-->
+    <!--                <ion-list>-->
+    <!--                    <ion-list-header>-->
+    <!--                        Loyalty Card Stamp App-->
+    <!--                    </ion-list-header>-->
+    <!--                    <ion-menu-toggle autoHide="false" *ngFor="let p of appPages; let i = index">-->
+    <!--                        <ion-item [routerLink]="p.url" routerLinkActive="selected" routerDirection="root"-->
+    <!--                                  detail="false">-->
+    <!--                            <ion-icon slot="start" [name]="p.icon + '-outline'"></ion-icon>-->
+    <!--                            <ion-label>-->
+    <!--                                {{p.title}}-->
+    <!--                            </ion-label>-->
+    <!--                        </ion-item>-->
+    <!--                    </ion-menu-toggle>-->
+    <!--                </ion-list>-->
 
-<!--                <ion-list>-->
-<!--                    <ion-list-header>-->
-<!--                        Account-->
-<!--                    </ion-list-header>-->
-<!--                    <ion-menu-toggle auto-hide="false">-->
-<!--                        <ion-item (click)="logout()" routerLinkActive="selected" router-direction="root"-->
-<!--                                  detail="false">-->
-<!--                            <ion-icon slot="start" name="log-out-outline"></ion-icon>-->
-<!--                            <ion-label>-->
-<!--                                Log Out-->
-<!--                            </ion-label>-->
-<!--                        </ion-item>-->
-<!--                    </ion-menu-toggle>-->
-<!--                </ion-list>-->
+    <!--                <ion-list>-->
+    <!--                    <ion-list-header>-->
+    <!--                        Account-->
+    <!--                    </ion-list-header>-->
+    <!--                    <ion-menu-toggle auto-hide="false">-->
+    <!--                        <ion-item (click)="logout()" routerLinkActive="selected" router-direction="root"-->
+    <!--                                  detail="false">-->
+    <!--                            <ion-icon slot="start" name="log-out-outline"></ion-icon>-->
+    <!--                            <ion-label>-->
+    <!--                                Log Out-->
+    <!--                            </ion-label>-->
+    <!--                        </ion-item>-->
+    <!--                    </ion-menu-toggle>-->
+    <!--                </ion-list>-->
 
-<!--            </ion-content>-->
+    <!--            </ion-content>-->
 
-<!--        </ion-menu>-->
+    <!--        </ion-menu>-->
 
-<!--        <ion-router-outlet id="main-content"></ion-router-outlet>-->
+    <!--        <ion-router-outlet id="main-content"></ion-router-outlet>-->
 
-<!--    </ion-split-pane>-->
+    <!--    </ion-split-pane>-->
 </ion-app>
