small refactor tabs name

--- a/src/app/pages/admin/view/view.page.html
+++ b/src/app/pages/admin/view/view.page.html
@@ -8,10 +8,10 @@
     <ion-toolbar *ngIf="!ios">
         <ion-segment [(ngModel)]="segment">
             <ion-segment-button value="allUsers">
-                View All Users
+                View Users
             </ion-segment-button>
             <ion-segment-button value="allCompanies">
-                View All Companies
+                View All Stamp Cards
             </ion-segment-button>
         </ion-segment>
     </ion-toolbar>
