--- a/src/app/pages/manager/qr/qr.page.html
+++ b/src/app/pages/manager/qr/qr.page.html
@@ -31,7 +31,7 @@
         </ion-input>
       </ion-item>
       <div class="qrImage">
-        <ngx-qrcode [value]="qrData" [elementType]="elementType" qrl-class="my-code" class="qrImage" >
+        <ngx-qrcode [value]="qrData" [elementType]="elementType" height="300" width="300" qrl-class="my-code" class="qrImage" >
         </ngx-qrcode>
       </div>
 
