add a new service provider to edit all users

--- a/src/app/pages/admin/stat/stat.page.html
+++ b/src/app/pages/admin/stat/stat.page.html
@@ -39,6 +39,11 @@
   </ion-item>
 
   <ion-item>
+    <ion-label>- in this Admins</ion-label>
+    <ion-badge color="medium" slot="end">{{adminCount}}</ion-badge>
+  </ion-item>
+
+  <ion-item>
     <ion-label>All Stamp Cards</ion-label>
     <ion-badge color="danger" slot="end">{{stampCardsCount}}</ion-badge>
   </ion-item>
