--- a/src/app/pages/customer/qr/qr.page.html
+++ b/src/app/pages/customer/qr/qr.page.html
@@ -52,7 +52,7 @@
 
             <ion-card *ngIf="scannedCode">
                 <ion-card-content>
-                    Result from Scan: {{ scannedCode }}
+<!--                    Result from Scan: {{ companyId }}-->
                 </ion-card-content>
             </ion-card>
         </ion-item-group>
