--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,13 @@
+.logoText {
+  /*  position: absolute; */
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .splash {
   position: absolute;
   width: 100%;
@@ -10,8 +20,8 @@
 }
 
 .sk-cube-grid {
-  width: 40px;
-  height: 40px;
+  width: 100px;
+  height: 100px;
   margin: 100px auto;
 }
 
