--- a/src/app/pages/customer/wallet/wallet.page.html
+++ b/src/app/pages/customer/wallet/wallet.page.html
@@ -42,7 +42,7 @@
                 <ion-searchbar placeholder="Filter Companies" showCancelButton="focus" (ionInput)="getItems($event)"></ion-searchbar>
                 <ion-card *ngFor="let company of companies">
 
-                    <ion-item detail="false" lines="none" routerLink="/tabs/wallet/card-detail/{{company.id}}">
+                    <ion-item detail="false" lines="none" routerLink="/card-detail/{{company.id}}">
                         <ion-card-header>
                             <ion-card-title>{{ company.companyName }}</ion-card-title>
                             <ion-card-subtitle>{{company.zipCode}} {{ company.city }} {{ company.street }} {{company.localNumber}}</ion-card-subtitle>
